# Melodix

./: .gitignore  MANIFEST.in  README.md  downloader.py  main.py  player.py  pyproject.toml  requirements.txt  styles.css  verify.py  visualizer.py  youtube_screen.py
melodix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/melodix/: add_to_playlist.py  downloader.py  main.py  playlists.py  playlists_screen.py  styles.css  visualizer.py  youtube_screen.py
src/melodix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
