[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "melodix"
version = "1.0.0"
description = "Melodix — btop-style terminal music player"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=8.0.0",
    "rich>=13.0.0",
    "yt-dlp",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Repository = "https://github.com/Tsukabe-Admin/Melodix"

[project.scripts]
melodix = "melodix.main:run_app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["melodix"]

[tool.setuptools.package-data]
"melodix" = ["styles.css"]
